Modified yanklist to be struct ent_ptr list, rather thant struct ent list.
Ents_that_depends_on_list now takes ent_ptr rather than struct ent * as parameter
Backslash double quotes in cpaste. Issue 574.
Do not free ents of sheets when deleting a sheet manually (only at exit).  just mark them as deleted.

Fixes
-----
** fix in calc_mobile_cols()
** fix not updating graph correctly after yanking cells with references -> Pc -> undo.
   It could also segfault on ocassions as well. Added test5 and test6 for this.

Issue #568: handle '>' and '<' on mappings.
Issue #569: fix invalid read/write/segfault when deleting column.
            Added test8 and test9 for this.

fix horizontal scroll when editing cells with long strings (wider than screen)
Avoid reading passed maxcols maxrows when shifting left or up over last sheet column/row.
fix in Pv when pasting over same place where data was yanked.
fix in paste_yanked_ents: calloc didnt count that yanked cells could share dependencies.
fix a bug when refreshing grid when autowrap operates. Issue 578.


Pending to make v0.8.3 release
-------------------
Add is_deleted flag on sheets that are deleted. So ents have a chance to update its references to that sheet.
Then rebuild graph.



Ideas for v0.8.4
----------------
+ arv should have priority over scimrc.
+ rethink overlap. it shows incorrectly if text does not fit in the current LINE
+ user customizable UI header (bar)
+ modify search procedure. highlight matches
+ yank.c functions should receive yanklist pointer as parameter, rather than use yanklist global variable.
this could allow future use of registers to copy to and paste from.
+ registers for yanking
+ use yanklist for added/removed in undo?

Please open a discussion on GitHub to comment on these and other feature requests.

***********
v0.8.2

Changes
-------

+ Improved yank and undo alloc'ing. Malloc as much we need from start in a long batch and avoid small mallocs.
