@@ -914,25 +914,9 @@ void do_commandmode(struct block * sb) {
             wcscpy(interp_line, inputline);
             send_to_interp(interp_line);
 
+        // Change a config value
         }  else if ( ! wcsncmp(inputline, L"set ", 4) ) {
-            wchar_t line [BUFFERSIZE];
-            wcscpy(line, inputline);
-            del_range_wchars(line, 0, 3);
-
-            wchar_t * l;
-            char oper[BUFFERSIZE];
-            if ((l = wcschr(line, L' ')) != NULL) l[0] = L'\0';
-            if ((l = wcschr(line, L'=')) != NULL) l[0] = L'\0';
-
-            wcscpy(interp_line, inputline);
-            send_to_interp(interp_line);
-
-            wcstombs(oper, line, BUFFERSIZE);
-            if (get_conf_value(oper)) {
-                sc_info("Config value changed: %s", oper);
-            } else if (strlen(oper) > 2 && ! wcsncmp(inputline, L"set no", 6)) {
-                sc_info("Config value changed: %s", &oper[2]);
-            }
+            change_config_parameter(inputline);
 
         } else if ( ! wcsncmp(inputline, L"pad ", 4) ) {
             int c = sh->curcol, cf = sh->curcol;
